# aoc2022

./: Cargo.toml
examples/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  lib.rs
src/rx/: mod.rs  replay_subject.rs
