[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
bench = false
doctest = false
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[example]]
name = "day01"

[[example]]
name = "day02"