[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
bench = false
doctest = false
doc = false

# Dependencies loaded through git because the crates.io index is no small thing

[dependencies.itermore]
git = "https://github.com/rossmacarthur/itermore/"
rev = "0.5.0"
default-features = false
features = ["array_chunks"]

[[example]]
name = "day01"

[[example]]
name = "day02"

[[example]]
name = "day03"
